--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-test4:47am
+<!DOCTYPE html>
+<html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
+
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+<section> A commit has occured on this html doc put the latest changes not yet in my local   </section>
+</body>
+</html>
