Main moved on added index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 
+  <h1>Main moved on</h1>
+  
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 <section> A commit has occured on this html doc put the latest changes not yet in my local   </section>
