--- a/index.html
+++ b/index.html
@@ -10,5 +10,7 @@
 <h1>This is a Heading</h1>
 <p>This is a paragraph.</p>
 <section> A commit has occured on this html doc put the latest changes not yet in my local   </section>
+<p>this is my contribution</p>
+
 </body>
 </html>
